--- a/http/preseed.cfg
+++ b/http/preseed.cfg
@@ -23,10 +23,10 @@ d-i grub-installer/only_debian boolean true
 d-i grub-installer/with_other_os boolean true
 
 #Create Headhoncho Account
-d-i passwd/user-fullname string headhoncho 
-d-i passwd/username string headhoncho
-d-i passwd/user-password password Zengenti987
-d-i passwd/user-password-again password Zengenti987
+d-i passwd/user-fullname string packer 
+d-i passwd/username string packer
+d-i passwd/user-password password packer
+d-i passwd/user-password-again password packer
 d-i user-setup/allow-password-weak boolean true
 
 # Partitioning
@@ -38,8 +38,8 @@ d-i partman/confirm boolean true
 d-i partman/confirm_nooverwrite boolean true
 
 d-i passwd/root-login boolean true
-d-i passwd/root-password password Zengenti987
-d-i passwd/root-password-again password Zengenti987
+d-i passwd/root-password password packer
+d-i passwd/root-password-again password packer
 
 
 d-i pkgsel/include string open-vm-tools openssh-server
